# cellularpp

./: .clang-format  .gitignore  Dockerfile  LICENSE.md  README.md  meson.build  meson_options.txt  mingw-cross.txt
docker/: Dockerfile
include/: cellular.hpp  cellular_gui.hpp  game_of_life.hpp  pprint.hpp
include/automata/: game_of_life.hpp  wireworld.hpp
src/: caves.hpp  cellular.cpp  game_of_life.cpp  game_of_life.hpp  meson.build  wireworld.cpp  wireworld.hpp
tests/: game_of_life.cpp  meson.build  spinner.txt  test_example.cpp  test_s.cpp
